--- a/TransactionApp/appsettings.json
+++ b/TransactionApp/appsettings.json
@@ -1,5 +1,7 @@
 {
-
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FeeCalculateDb;Integrated Security=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
